<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.oscar.find.network.activity.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ScrollView android:id="@+id/ScrlView" android:layout_width="fill_parent" android:layout_height="fill_parent" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>



        <LinearLayout
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/manufacturer"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:text=""
                android:id="@+id/labelFabricante" />

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/model"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:text=""
                android:id="@+id/labelModelo" />
        </LinearLayout>



        <LinearLayout
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/software_version"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:text=""
                android:id="@+id/labelNumeroVersion" />
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/api_level"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:text=""
                android:id="@+id/labelApiLevel" />
        </LinearLayout>



        <LinearLayout
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/serialNumber"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:text=""
                android:id="@+id/labelNumeroSerie" />
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/processor"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:text=""
                android:id="@+id/labelProcesador" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/rooted"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:text=""
                android:id="@+id/labelRooted" />

        </LinearLayout>


        <!-- INFORMACIÓN DE RED -->
        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network_information"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/ssid"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:text=""
                android:id="@+id/labelRedWifi" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/ip_address"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:text=""
                android:id="@+id/labelDireccionIp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/mac_address"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:text=""
                android:id="@+id/labelDireccionMac" />

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/mask_net_address"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:text=""
                android:id="@+id/labelMascaraRed" />

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/gateway_address"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:text=""
                android:id="@+id/labelDireccionPuertaEnlace" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/primary_dns"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:text=""
                android:id="@+id/labelDnsPrimario" />

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/secundary_dns"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:text=""
                android:id="@+id/labelDnsSecundario" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/labelWifiDesconectado"
                android:layout_height="wrap_content"
                android:layout_width ="wrap_content"
                android:text="@string/error_disconnected_wifi"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"/>

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

           <Button
               android:id="@+id/btnDescubrir"
               android:layout_width="340dp"
               android:layout_height="match_parent"
               android:text="Descubrir"
               />
        </LinearLayout>

    </LinearLayout>
    </ScrollView>


</RelativeLayout>
